// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Asset: Represents assets owned by users.
User: Represents a system user.
AuditLog: Keeps track of user activities.
Configuration: Stores various system configuration settings.
Department: Defines departments within the company.
Profile: Stores additional info about the user.
Project: Represents projects within the organization.
Role: Defines different roles within the system.
Task: Represents tasks assigned to users.
Team: Represents a team within the system.
UserRole: Associative table connecting users with roles.
UserTeam: Associative table connecting users with teams.
'''
}

Table Asset {
    id INTEGER [primary key]
    name VARCHAR 
    description VARCHAR 
    owner_id INTEGER 
    }

Table User {
    id INTEGER [primary key]
    name VARCHAR 
    email VARCHAR 
    created_at DATETIME 
    profile_id INTEGER 
    }

Table AuditLog {
    id INTEGER [primary key]
    action VARCHAR 
    user_id INTEGER 
    timestamp DATETIME 
    }

Table Configuration {
    id INTEGER [primary key]
    key VARCHAR 
    value VARCHAR 
    }

Table Department {
    id INTEGER [primary key]
    name VARCHAR 
    head_id INTEGER 
    }

Table Profile {
    id INTEGER [primary key]
    bio VARCHAR 
    date_of_birth DATE 
    user_id INTEGER 
    }

Table Project {
    id INTEGER [primary key]
    name VARCHAR 
    description VARCHAR 
    lead_id INTEGER 
    }

Table Role {
    id INTEGER [primary key]
    name VARCHAR 
    description VARCHAR 
    }

Table Task {
    id INTEGER [primary key]
    title VARCHAR 
    description VARCHAR 
    assigned_to_id INTEGER 
    status VARCHAR 
    }

Table Team {
    id INTEGER [primary key]
    name VARCHAR 
    description VARCHAR 
    }

Table UserRole {
    id INTEGER [primary key]
    user_id INTEGER 
    role_id INTEGER 
    }

Table UserTeam {
    id INTEGER [primary key]
    user_id INTEGER 
    team_id INTEGER 
    }



// Relationships
    Ref: Asset.(owner_id) < User.(id)
    Ref: User.(profile_id) < Profile.(id)
    Ref: AuditLog.(user_id) < User.(id)
    Ref: Department.(head_id) < User.(id)
    Ref: Profile.(user_id) < User.(id)
    Ref: Project.(lead_id) < User.(id)
    Ref: Task.(assigned_to_id) < User.(id)
    Ref: UserRole.(role_id) < Role.(id)
    Ref: UserRole.(user_id) < User.(id)
    Ref: UserTeam.(team_id) < Team.(id)
    Ref: UserTeam.(user_id) < User.(id)
